Fix 'global actions' menu visibility
This patch restores the bugfix from at #fc0cf9df in the internal repo. It got
lost when we moved the repo to WMF gerrit.

--- a/resources/stylesheets/component/desktop_sm/aside.navigation_main.less
+++ b/resources/stylesheets/component/desktop_sm/aside.navigation_main.less
@@ -86,6 +86,9 @@ body{
 		top: @menu-top-height + @banner-top-height;
 		width: @navigation-main-width;
 		#bs-sitenavtabs {
+			ul.nav-pills li.calumma-navigation-mobile-hidden {
+				display: block;
+			}
 			ul.nav-pills a > i::before {
 				font-size: 150%;
 			}
