--- a/resources/stylesheets/component/mobile/aside.navigation_main.less
+++ b/resources/stylesheets/component/mobile/aside.navigation_main.less
@@ -64,6 +64,10 @@ body{
 			}
 		}
 		#bs-sitenavtabs {
+			ul.nav-pills li.calumma-navigation-mobile-hidden {
+				display: none;
+			}
+
 			ul.nav-pills a > i::before {
 				font-size: 2em;
 			}
